# pybreak-gui

./: pyproject.toml
pybreak_gui/: app.py  frame_history.py  sandbox.py
pybreak_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pybreak_gui.py
