[tool.poetry]
name = "pybreak-gui"
version = "0.1.0"
description = "Huh."
authors = ["Darren Burns <darren.burns@fanduel.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt-toolkit = "^3.0"

[tool.poetry.dev-dependencies]
ward = "0.34.0b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
